# RAG_pipeline

./: .env.example  documentFedRAG_02.ipynb  moreDocPersistRAG_04.ipynb  persistRAG_03.ipynb  pyproject.toml  textFedRAG_01.ipynb
VectorDB/bcfe4b48-2521-4614-8306-d5d0acb614c0/: index_metadata.pickle
