[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "hf>=1.17.0",
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "pypdf>=6.4.1",
    "sentence-transformers>=5.5.1",
]
